[package]
name = "fhe-lut"
version = "0.1.0"
edition = "2021"
keywords = ["cryptography", "homomorphic-encryption", "HE", "FHE"]
license = "MIT"

[dependencies]
clap = "3.0"
num-integer = "0.1.46"
csv = "1.3"
debug_print = "1.0.0"
dwt = "0.5.2"
linfa-datasets = { version = "0.7", features = ["iris", "winequality"] }
rayon = "1.7.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.114"
tfhe = { version = "0.6", features = ["boolean", "shortint", "integer"] }

[features]
x86 = ["tfhe/x86_64-unix"]
aarch64 = ["tfhe/aarch64-unix"]

[[bin]]
name = "dwt_lr"
path = "src/dwt_lr.rs"

[[bin]]
name = "float_lr"
path = "src/float_lr.rs"

[[bin]]
name = "plain_lr"
path = "src/plain_lr.rs"

[[bin]]
name = "encrypted_lr"
path = "src/encrypted_lr.rs"

[[bin]]
name = "encrypted_lr_dwt"
path = "src/encrypted_lr_dwt.rs"

[[bin]]
name = "sigmoid"
path = "src/sigmoid.rs"

[[bin]]
name = "sigmoid_encrypted_dwt"
path = "src/sigmoid_encrypted_dwt.rs"

[[bin]]
name = "encrypted_lr_dwt_db2"
path = "src/encrypted_lr_dwt_db2.rs"