[package]
name = "ripple"
version = "0.1.0"
edition = "2021"
keywords = ["cryptography", "homomorphic-encryption", "HE", "FHE"]
license = "MIT"

[dependencies]
clap = "3.0"
num-integer = "0.1.46"
csv = "1.3"
debug_print = "1.0.0"
dwt = "0.5.2"
linfa-datasets = { version = "0.7", features = ["iris", "winequality"] }
rayon = "1.7.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.114"
tfhe = { version = "0.6", features = ["boolean", "shortint", "integer"] }

[features]
x86 = ["tfhe/x86_64-unix"]
aarch64 = ["tfhe/aarch64-unix"]

# Logistic Regression

[[bin]]
name = "lr_ptxt"
path = "src/lr_ptxt.rs"

[[bin]]
name = "lr_ptxt_float"
path = "src/lr_ptxt_float.rs"

[[bin]]
name = "lr_lut"
path = "src/lr_lut.rs"

[[bin]]
name = "lr_haar_ptxt"
path = "src/lr_haar_ptxt.rs"

[[bin]]
name = "lr_haar"
path = "src/lr_haar.rs"

[[bin]]
name = "lr_db2"
path = "src/lr_db2.rs"

[[bin]]
name = "lr_bior"
path = "src/lr_bior.rs"

[[bin]]
name = "sigmoid"
path = "src/sigmoid.rs"

[[bin]]
name = "sigmoid_encrypted_dwt"
path = "src/sigmoid_encrypted_dwt.rs"

# Correlation Coefficient

[[bin]]
name = "correlation_ptxt"
path = "src/correlation_ptxt.rs"

[[bin]]
name = "correlation_lut"
path = "src/correlation_lut.rs"

# Euclidean Distance

[[bin]]
name = "euclidean"
path = "src/euclidean.rs"

# Primitive Timings

[[bin]]
name = "primitive_ops"
path = "src/primitive_ops.rs"
